--- a/app/src/main/res/layout/fragment_item_detail.xml
+++ b/app/src/main/res/layout/fragment_item_detail.xml
@@ -1,63 +1,157 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/item_detail_container"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".ItemDetailHostActivity"
-    tools:ignore="MergeRootFrame">
+    xmlns:bind="http://schemas.android.com/tools">
 
-    <androidx.core.widget.NestedScrollView
-        android:id="@+id/item_detail_scroll_view"
+    <data>
+
+        <variable
+            name="airportListViewModel"
+            type="au.com.flymultiverse.models.viewmodels.AirportListViewModel" />
+
+    </data>
+
+    <androidx.coordinatorlayout.widget.CoordinatorLayout
+        xmlns:tools="http://schemas.android.com/tools"
+        android:id="@+id/item_detail_container"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        app:layout_behavior="@string/appbar_scrolling_view_behavior">
+        android:layout_marginBottom="?attr/actionBarSize"
+        tools:context=".ItemDetailHostActivity"
+        tools:ignore="MergeRootFrame">
 
-        <TextView
-            android:id="@+id/item_detail"
-            style="?android:attr/textAppearanceLarge"
+        <com.google.android.material.appbar.AppBarLayout
+            android:id="@+id/app_bar"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:padding="16dp"
-            android:textIsSelectable="true"
-            tools:context="au.com.flymultiverse.ItemDetailFragment" />
-
-    </androidx.core.widget.NestedScrollView>
-
-    <com.google.android.material.appbar.AppBarLayout
-        android:id="@+id/app_bar"
-        android:layout_width="match_parent"
-        android:layout_height="@dimen/app_bar_height"
-        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
-
-        <com.google.android.material.appbar.CollapsingToolbarLayout
-            android:id="@+id/toolbar_layout"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            app:contentScrim="?attr/colorPrimary"
-            app:layout_scrollFlags="scroll|exitUntilCollapsed"
-            app:toolbarId="@+id/toolbar">
+            android:layout_height="?attr/actionBarSize"
+            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
 
             <androidx.appcompat.widget.Toolbar
                 android:id="@+id/detail_toolbar"
                 android:layout_width="match_parent"
                 android:layout_height="?attr/actionBarSize"
-                app:layout_collapseMode="pin"
+                app:title="@{airportListViewModel.selectedAirport.airportCode}"
                 app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />
 
-        </com.google.android.material.appbar.CollapsingToolbarLayout>
+        </com.google.android.material.appbar.AppBarLayout>
 
-    </com.google.android.material.appbar.AppBarLayout>
+        <ScrollView
+            android:layout_marginTop="?attr/actionBarSize"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
 
-    <com.google.android.material.floatingactionbutton.FloatingActionButton
-        android:id="@+id/fab"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center_vertical|start"
-        android:layout_margin="@dimen/fab_margin"
-        app:layout_anchor="@+id/item_detail_scroll_view"
-        app:layout_anchorGravity="top|end"
-        app:srcCompat="@android:drawable/stat_notify_chat" />
+            <LinearLayout
+                android:orientation="vertical"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+
+                <TextView
+                    android:id="@+id/name"
+                    style="?android:attr/textAppearanceLarge"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:padding="16dp"
+                    android:text="@{airportListViewModel.selectedAirport.airportName}"
+                    android:textIsSelectable="true"
+                    tools:context="au.com.flymultiverse.ItemDetailFragment" />
+
+                <TextView
+                    android:id="@+id/internationalAirport"
+                    style="?android:attr/textAppearanceLarge"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:padding="16dp"
+                    android:text="@{airportListViewModel.selectedAirport.internationalAirportString}"
+                    android:textIsSelectable="true"
+                    tools:context="au.com.flymultiverse.ItemDetailFragment" />
+
+                <TextView
+                    android:id="@+id/domesticAirport"
+                    style="?android:attr/textAppearanceLarge"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:padding="16dp"
+                    android:text="@{airportListViewModel.selectedAirport.domesticAirportString}"
+                    android:textIsSelectable="true"
+                    tools:context="au.com.flymultiverse.ItemDetailFragment" />
+
+                <TextView
+                    android:id="@+id/regionalAirport"
+                    style="?android:attr/textAppearanceLarge"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:padding="16dp"
+                    android:text="@{airportListViewModel.selectedAirport.regionalAirportString}"
+                    android:textIsSelectable="true"
+                    tools:context="au.com.flymultiverse.ItemDetailFragment" />
+
+
+                <TextView
+                    android:id="@+id/onlineIndicator"
+                    style="?android:attr/textAppearanceLarge"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:padding="16dp"
+                    android:text="@{airportListViewModel.selectedAirport.onlineIndicatorString}"
+                    android:textIsSelectable="true"
+                    tools:context="au.com.flymultiverse.ItemDetailFragment" />
+
+
+                <TextView
+                    android:id="@+id/eTicketable"
+                    style="?android:attr/textAppearanceLarge"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:padding="16dp"
+                    android:text="@{airportListViewModel.selectedAirport.eticketableAirportString}"
+                    android:textIsSelectable="true"
+                    tools:context="au.com.flymultiverse.ItemDetailFragment" />
+
+                <TextView
+                    android:id="@+id/regionInformation"
+                    style="?android:attr/textAppearanceLarge"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:padding="16dp"
+                    android:text="@{airportListViewModel.selectedAirport.regionInformation}"
+                    android:textIsSelectable="true"
+                    tools:context="au.com.flymultiverse.ItemDetailFragment" />
+
+                <TextView
+                    android:id="@+id/locationInformation"
+                    style="?android:attr/textAppearanceLarge"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:padding="16dp"
+                    android:text="@{airportListViewModel.selectedAirport.locationInformation}"
+                    android:textIsSelectable="true"
+                    tools:context="au.com.flymultiverse.ItemDetailFragment" />
+
+
+                <TextView
+                    android:id="@+id/countryInformation"
+                    style="?android:attr/textAppearanceLarge"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:padding="16dp"
+                    android:text="@{airportListViewModel.selectedAirport.countryInformation}"
+                    android:textIsSelectable="true"
+                    tools:context="au.com.flymultiverse.ItemDetailFragment" />
+
+                <TextView
+                    android:id="@+id/cityInformation"
+                    style="?android:attr/textAppearanceLarge"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:padding="16dp"
+                    android:text="@{airportListViewModel.selectedAirport.cityInformation}"
+                    android:textIsSelectable="true"
+                    tools:context="au.com.flymultiverse.ItemDetailFragment" />
+
+            </LinearLayout>
+
+        </ScrollView>
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
+
+</layout>
