--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -3,6 +3,8 @@
     <dimen name="fab_margin">16dp</dimen>
     <dimen name="item_width">200dp</dimen>
     <dimen name="app_bar_height">200dp</dimen>
-    <dimen name="text_margin">16dp</dimen>
+    <dimen name="text_margin">4dp</dimen>
     <dimen name="container_margin">8dp</dimen>
+    <dimen name="dim_8dp">8dp</dimen>
+    <dimen name="dim_4dp">4dp</dimen>
 </resources>
